[package]
name = "ents-heed"
version.workspace = true
authors.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ents database implementation using heed"
repository = "https://github.com/blmarket/ents"

[dependencies]
ents = { version = "0.1.0", path = "../ents" }
heed = { version = "0.22" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dyn-clone = "1.0.20"
thiserror = "2"
anyhow = "1"
byteorder = "1"
typetag = "0.2"
snowflaked = "1"

[dev-dependencies]
typetag = "0.2"
tempfile = "3"
chrono = "0.4"
ents-test-suite = { path = "../ents-test-suite" }

[[example]]
name = "basic_crud"
path = "examples/basic_crud.rs"

[[example]]
name = "blog_system"
path = "examples/blog_system.rs"

[[example]]
name = "simple_blog"
path = "examples/simple_blog.rs"

