[package]
name = "ents-test-suite"
version.workspace = true
authors.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ents database implementation test suite"
repository = "https://github.com/blmarket/ents"

[dependencies]
ents = { version = "0.1.0", path = "../ents" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
typetag = "0.2"